# sec-filing-intelligence-copilot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_schema.py
backend/src/sec_copilot/: __init__.py  cli.py  config.py  main.py
backend/src/sec_copilot/answering/: __init__.py  classifier.py  llm_synthesis.py  models.py  service.py  synthesis.py
backend/src/sec_copilot/comparison/: __init__.py  diff.py  models.py  service.py
backend/src/sec_copilot/db/: models.py  session.py
backend/src/sec_copilot/evals/: __init__.py  dataset.py  metrics.py  models.py  openai_baseline.py  report.py  runner.py
backend/src/sec_copilot/facts/: __init__.py  metrics.py  service.py
backend/src/sec_copilot/filings/: __init__.py  chunking.py  parser.py  sections.py  text.py
backend/src/sec_copilot/ingestion/: __init__.py  sec.py
backend/src/sec_copilot/repositories/: __init__.py  core.py
backend/src/sec_copilot/retrieval/: __init__.py  embeddings.py  filters.py  llamaindex_compat.py  nodes.py  qdrant.py  service.py  sparse.py
backend/src/sec_copilot/sec/: __init__.py  client.py  identifiers.py  normalizers.py
backend/tests/: conftest.py  test_answer_synthesis.py  test_answering.py  test_comparison.py  test_evals.py  test_facts.py  test_filing_chunking.py  test_filing_parser.py  test_filing_sections.py  test_filing_text.py  test_health.py  test_persistence.py  test_retrieval.py  test_sec_client.py  test_sec_identifiers.py  test_sec_ingestion.py  test_sec_normalizers.py
backend/tests/fixtures/sec/: aapl-20240629.htm  aapl-20240928.htm  companyfacts_aapl.json  submissions_aapl.json
evals/: README.md
(+14 files in other folders)
