[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-filing-intelligence-copilot"
version = "0.1.0"
description = "FastAPI backend for the SEC Filing Intelligence Copilot."
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.14.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "SQLAlchemy>=2.0.35",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]

[tool.ruff]
line-length = 100
target-version = "py39"
